Nav & banner img done

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -59,3 +59,40 @@
     }
   }
 }// home
+
+#head{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+  width: 100%;
+  border:2px solid black;
+  
+  
+ //display:flex;//
+ //justify-content: space-between;//
+ //flex-wrap:wrap; //
+ 
+ 
+}
+
+.top-bar{
+  display:flex;
+  justify-content: space-evenly;
+
+  width:65%;
+  margin-bottom:0;
+  
+}
+
+.banner{
+  width: 65%;
+  margin-top:0;
+  border-top: 2px dashed @navigation-border;
+  
+}
+
+.info{
+  width:65%;
+  margin-top: 3%;
+}
