--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,26 @@
 // Navigation Styles here
+
+.navigation{
+    display:flex;
+   width:100%;
+   align-content: center;
+   justify-content: space-between; 
+   margin: 20px 0;
+   padding: 20px 0;
+   display: flex;
+   justify-content: space-between;
+   
+
+
+nav a{
+    font-size: 1.5rem;
+    font-family: 'Roboto', sans-serif;
+    margin:20px;
+    color:black
+} //end of nav link div
+
+h1{
+    margin-left:20px;
+} //end of h1
+
+} //end of nav div
