--- a/less/variables.less
+++ b/less/variables.less
@@ -12,3 +12,11 @@
 @shark: #212529;
 @eastern-blue: #17A2B8;
 @sandy-beach: #FFEBCD;
+
+//flexbox mixin
+
+.flex-box(@justify, @align){
+    display:flex;
+    justify-content: @justify;
+    align-items: @align;
+}
