--- a/less/home-page.less
+++ b/less/home-page.less
@@ -66,33 +66,36 @@
     justify-content: center;
 
   width: 100%;
-  border:2px solid black;
-  
-  
- //display:flex;//
- //justify-content: space-between;//
- //flex-wrap:wrap; //
+   
  
- 
-}
 
 .top-bar{
   display:flex;
   justify-content: space-evenly;
-
-  width:65%;
+  border-bottom: 2px dashed @navigation-border;
+  width:100%;
   margin-bottom:0;
-  
-}
 
-.banner{
+  h1{
+    margin-left:18%;
+} //end of h1
+  
+} //top bar end
+}//head end
+
+.banner img{
+  
+  margin-top: 3%;
   width: 65%;
-  margin-top:0;
-  border-top: 2px dashed @navigation-border;
+    margin-left:18%;
+    margin-bottom:3%;
   
 }
 
 .info{
-  width:65%;
+
   margin-top: 3%;
+  border-bottom: 2px dashed @navigation-border;
+  width: 65%;
+    margin: 0 auto 20px;
 }
