--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,21 +6,21 @@
    align-content: center;
    justify-content: space-between; 
    margin: 20px 0;
-   padding: 20px 0;
+   padding: 10px 0;
    display: flex;
-   justify-content: space-between;
    
+   margin-right:15%;
 
 
 nav a{
     font-size: 1.5rem;
     font-family: 'Roboto', sans-serif;
-    margin:20px;
-    color:black
+    margin:30px;
+    color:black;
+    justify-content: space-around;
+    
+
 } //end of nav link div
 
-h1{
-    margin-left:20px;
-} //end of h1
 
 } //end of nav div
