end of day. Mobile to finish, buttons to be done

--- a/less/global.less
+++ b/less/global.less
@@ -8,6 +8,12 @@ html {
 
 html, body {
   font-family: 'Roboto', sans-serif;
+
+  @media @mobile {
+    display:flex;
+    flex-direction: column;
+  }
+ 
 }
 
 h1, h2, h3, h4, h5 {
@@ -33,6 +39,8 @@ p {
   line-height: 1.5;
   font-size: 1.6rem;
   padding-bottom: 10px;
+
+  
 }
 
 img {
@@ -44,4 +52,11 @@ img {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+
+@media @mobile{
+  display:flex;
+  flex-direction:column;
+border:2px solid green;
+}
+  
 }
