--- a/css/index.css
+++ b/css/index.css
@@ -136,6 +136,13 @@ html,
 body {
   font-family: 'Roboto', sans-serif;
 }
+@media (max-width: 500px) {
+  html,
+  body {
+    display: flex;
+    flex-direction: column;
+  }
+}
 h1,
 h2,
 h3,
@@ -167,6 +174,13 @@ img {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+}
+@media (max-width: 500px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    border: 2px solid green;
+  }
 }
 .navigation {
   width: 100%;
@@ -201,43 +215,44 @@ img {
   flex-wrap: wrap;
   justify-content: space-between;
 }
-.home .content-section .text-content {
-  width: 48%;
-  padding-right: 1%;
+@media (max-width: 500px) {
+  .home .content-section {
+    border: 2px solid blue;
+  }
 }
-.home .content-section .img-content {
+.home .img-content {
   width: 48%;
   padding-left: 1%;
 }
-.home .content-section .img-content img {
+.home .img-content img {
   border-radius: 10px;
 }
-.home .inverse-content {
+.inverse-content {
   padding-bottom: 30px;
   border-bottom: 2px dashed #C0C0C0;
 }
-.home .inverse-content .text-content {
+.inverse-content .text-content {
   padding-left: 1%;
   padding-right: 0;
 }
-.home .inverse-content .img-content {
+.inverse-content .img-content {
   padding-right: 1%;
   padding-left: 0;
 }
-.home .content-destination {
+.content-destination {
   width: 75%;
   margin: 0 auto 30px;
 }
-.home .content-destination img {
+.content-destination img {
   border-radius: 10px;
 }
-.home .content-pick {
+.content-pick {
   padding-top: 30px;
   border-top: 2px dashed #C0C0C0;
   display: flex;
   justify-content: space-between;
 }
-.home .content-pick .destination {
+.content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
 }
@@ -254,6 +269,12 @@ img {
   width: 100%;
   margin-bottom: 0;
 }
+@media (max-width: 500px) {
+  #head .top-bar {
+    border: 2px solid red;
+    display: flex;
+  }
+}
 #head .top-bar h1 {
   margin-left: 18%;
 }
@@ -263,9 +284,21 @@ img {
   margin-left: 18%;
   margin-bottom: 3%;
 }
+@media (max-width: 500px) {
+  .banner img {
+    width: 90%;
+    margin-right: 5%;
+    margin-left: 5%;
+  }
+}
 .info {
   margin-top: 3%;
   border-bottom: 2px dashed #C0C0C0;
   width: 65%;
   margin: 0 auto 20px;
+}
+@media (max-width: 500px) {
+  .info {
+    width: 90%;
+  }
 }
