--- a/less/home-page.less
+++ b/less/home-page.less
@@ -8,6 +8,7 @@
 
     @media @mobile{
  border:2px solid blue;
+ flex-direction:column;
     }
    
    
@@ -17,6 +18,10 @@
     .img-content {
       width: 48%;
       padding-left: 1%;
+
+      @media @mobile{
+        width:100%;
+      }
 
       img {
         border-radius: 10px;
@@ -28,24 +33,51 @@
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
 
+    @media @mobile{
+      display:flex;
+      flex-direction:column;
+    }
+
     .text-content {
       padding-left: 1%;
       padding-right: 0;
-    }
 
-    .img-content {
-      padding-right: 1%;
-      padding-left: 0;
     }
   }
+   .img-content {
+      padding-right: 1%;
+      padding-left: 0;
+
+      @media @mobile{
+        border:2px solid purple;
+        order:2;
+        width:100%;
+  
+       }
+       
+      
+    }
+  
 
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
-   
+    
+    @media @mobile{
+      width:95%;
+    }
+    
 
     img {
       border-radius: 10px;
+      border:2px solid green;
+
+      @media @mobile{
+        width:100%;
+      }
+      
+
+      
     }
   }
 
@@ -55,9 +87,22 @@
     display: flex;
     justify-content: space-between;
 
+    @media @mobile{
+      flex-direction: column;
+      margin-left: 2%;
+      margin-right:2%
+    }
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
+  
+      @media @mobile{
+        width:100%;
+        margin-left: 2%;
+      margin-right:2%;
+      border:2px solid red;
+      }
     } //destination end
 
 
@@ -81,13 +126,16 @@
   width:100%;
   margin-bottom:0;
 
-@media @mobile{
-  border:2px solid red;
-display:flex;
-}
+
 
   h1{
     margin-left:18%;
+
+    @media @mobile{
+      
+      margin:0 auto;
+    }
+
 
 } //end of h1
   
@@ -119,8 +167,6 @@ display:flex;
     @media @mobile{
       width:90%;
     }
+
+  
 }
-
-
-
-
