--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,5 +1,11 @@
-// Mixins in here
-.btn-custom (){
-    @bg-color:teal,  
+.custom-btn(@bg-color: teal, @size: 150px, @font-color: white){
+    display: block;
+    background-color: @bg-color;
+    margin: 0 10px 20px;
+    cursor: pointer;
+    width: @size;
+    height: 45px;
+    font-size: 2rem;
+    border-radius: 10px;
+    color:@font-color;
 }
-
