--- a/less/navigation.less
+++ b/less/navigation.less
@@ -9,6 +9,19 @@
    padding: 10px 0;
    display: flex;
    margin-right:15%;
+   
+
+   @media @mobile{
+    margin-left:0;
+    margin-right:0;    
+    align-items:center;
+ display:flex;
+ flex-direction:column;
+    width:100%;
+    height: 50%;
+    line-height: 2;  
+
+   }
 
 
 
@@ -20,7 +33,12 @@ nav a{
     margin:30px;
     color:black;
     justify-content: space-around;
-    
+
+    @media @mobile{
+        margin: 17px;      
+            
+
+    }
 
 } //end of nav link div
 
