--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,8 +1,6 @@
-.custom-btn(@bg-color: teal, @size: 150px, @font-color: white){
+.custom-btn(@bg-color: rgb(25, 187, 187), @size: 85%, @font-color: white){
     display: block;
     background-color: @bg-color;
-    margin: 0 10px 20px;
-    cursor: pointer;
     width: @size;
     height: 45px;
     font-size: 2rem;
