--- a/less/navigation.less
+++ b/less/navigation.less
@@ -35,7 +35,8 @@ nav a{
     justify-content: space-around;
 
     @media @mobile{
-        margin: 17px;      
+        justify-content: space-between;
+        margin: 25px;      
             
 
     }
