--- a/less/home-page.less
+++ b/less/home-page.less
@@ -7,12 +7,23 @@
     justify-content: space-between;
 
     @media @mobile{
- border:2px solid blue;
  flex-direction:column;
+ margin: 0 auto;
     }
    
-   
-}
+
+    .text-content {
+      width:48%;
+      padding-left: 1%;
+      padding-right: 0;
+
+      @media @mobile{
+        width:100%;
+        margin-left:3%;
+        margin-right:3%;
+      }
+
+    }
 
 
     .img-content {
@@ -21,6 +32,7 @@
 
       @media @mobile{
         width:100%;
+      
       }
 
       img {
@@ -28,30 +40,40 @@
       }
     }
   }
+}
 
   .inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
 
+
     @media @mobile{
       display:flex;
       flex-direction:column;
+    
     }
 
-    .text-content {
-      padding-left: 1%;
-      padding-right: 0;
+    .text-content{
+      width:48%;
+      padding-left:1%
 
+     
+    }
+
+    h2{
+      margin-top:5%;
+    
     }
   }
    .img-content {
+     width:48%;
       padding-right: 1%;
       padding-left: 0;
 
       @media @mobile{
-        border:2px solid purple;
         order:2;
         width:100%;
+        margin-left: 5%;
   
        }
        
@@ -65,12 +87,13 @@
     
     @media @mobile{
       width:95%;
+      margin-top: 5%;
     }
     
 
     img {
       border-radius: 10px;
-      border:2px solid green;
+      
 
       @media @mobile{
         width:100%;
@@ -101,7 +124,7 @@
         width:100%;
         margin-left: 2%;
       margin-right:2%;
-      border:2px solid red;
+  
       }
     } //destination end
 
