--- a/less/global.less
+++ b/less/global.less
@@ -50,14 +50,14 @@ img {
   margin: 0 auto;
 
 .btn{
-  .custom-btn();
+
+  .animate();
 
   @media @mobile{
-    .custom-btn(@size:80%);
+    .custom-btn(@size:85%);
     align-content:center;
     
 
   }
 }
-  
 }
