--- a/less/variables.less
+++ b/less/variables.less
@@ -13,7 +13,7 @@
 @eastern-blue: #17A2B8;
 @sandy-beach: #FFEBCD;
 
-//flexbox mixin
+//flexbox if needed
 
 .flex-box(@justify, @align){
     display:flex;
